fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,11 @@
 body {
   background: #fff8dc;
   margin: 0;
+  overflow: hidden;
   text-align: center;
 }
 
 canvas {
   top: 20%;
+  display: block;
 }
